[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Martin Webb <martindanielwebb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
